--- a/README
+++ b/README
@@ -1,3 +1,18 @@
+
+
+main infobox if time
+link form submission to details
+
+
+
+
+
+
+
+
+
+
+
 http://slaveryfootprint.org/#where_do_you_live
 http://www.neotokio.it/
 http://www.lor.in/
